<resources>
    <string name="app_name" translatable="false">TV Cast</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_please_wait_a_moment">Please wait a moment</string>
    <string name="loading_text">Loading...</string>
    <string name="text_setting_up_your_app_experience_please_wait_a_moment">Setting up your app experience, please wait a moment...</string>
    <string name="text_continue">Continue</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_next">Next</string>
    <string name="text_intro_review_headline">Turn Your Phone Into\nthe Big Screen</string>
    <string name="text_intro_review_title">Fast &amp; Reliable Casting</string>
    <string name="text_intro_review_description">I love this app! It makes streaming so easy. Smooth connection, simple setup, and stable playback every time</string>
    <string name="text_intro_terms_policy">By continuing, you agree to our\n%1$s and %2$s.</string>
    <string name="text_iap_premium_access">Premium Access</string>
    <string name="text_iap_enable_free_trial">Enable Free Trial</string>
    <string name="text_iap_best_deal">BEST DEAL</string>
    <string name="text_iap_start_free_trial">Start Free Trial</string>
    <string name="text_iap_try_for_free">Try for Free</string>
    <string name="text_iap_start_free_now">Start Free Now</string>
    <string name="text_iap_get_now">Get Now</string>
    <string name="text_iap_choose_plan_title">Choose your plan to unlock</string>
    <string name="text_iap_choose_plan_subtitle">If you\'re not satisfied, cancel anytime.</string>
    <string name="text_iap_intro_trial_then_price">%1$d days free then %2$s</string>
    <string name="text_iap_start_watching_now">Start Watching Now</string>
    <string name="text_iap_terms_of_service">Terms of Service</string>
    <string name="text_iap_privacy_policy">Privacy Policy</string>
    <string name="text_restore">Restore</string>
    <string name="text_iap_no_payment_now">No payment now. Cancel anytime</string>
    <string name="text_iap_trial_auto_renewal">3-day free trial, auto-renewal, cancel anytime.</string>
    <string name="text_iap_cast_without_limits">Cast videos, photos, web and IPTV without limits</string>
    <string name="text_iap_remove_ads">Remove all ads and interruptions</string>
    <string name="text_iap_hd_quality">Unlock HD screen mirroring quality</string>
    <string name="text_iap_priority_access">Priority access to premium casting tools</string>
    <string name="text_iap_weekly">Weekly</string>
    <string name="text_iap_monthly">Monthly</string>
    <string name="text_iap_yearly">Yearly</string>
    <string name="text_iap_lifetime">Lifetime</string>
    <string name="text_iap_one_time">One time payment</string>
    <string name="text_iap_save_up_to">Save up to 80%</string>
    <string name="text_iap_cancel_anytime">Cancel anytime</string>
    <string name="text_iap_then_price">Then %1$s</string>
    <string name="text_iap_free_trial_name">%1$s-day free trial</string>
    <string name="text_iap_three_day_free_trial">3-day free trial</string>
    <string name="text_iap_weekly_price">~ %1$s/week</string>
    <string name="text_iap_loading">Loading...</string>
    <string name="text_iap_congratulations">Congratulations</string>
    <string name="text_iap_purchase_success">You have successfully upgraded to Premium.</string>
    <string name="text_iap_billing_error">An error occurred. Please try again later.</string>
    <string name="text_iap_waiting_billing">Waiting for billing connection.</string>
    <string name="text_iap_no_product_selected">No product selected.</string>
    <string name="text_connect_tv">Connect TV</string>
    <string name="text_connected_device">Connected Device</string>
    <string name="text_connected_to">Connected to %1$s</string>
    <string name="text_mirror_screen">Mirror Screen</string>
    <string name="text_display_the_content_from_phone_to_tv">Display the content from Phone to TV</string>
    <string name="text_cast_media">Cast Media</string>
    <string name="text_view_favorite_photos_and_videos_on_tv">View favorite photos and videos on TV</string>
    <string name="text_camera_cast">Camera Cast</string>
    <string name="text_mirror_your_camera_to_your_tv">Mirror your Camera to your TV</string>
    <string name="text_try_tv_remote">Try TV Remote</string>
    <string name="text_use_your_phone_as_a_tv_remote">Use your phone as a TV remote</string>
    <string name="text_cast_youtube">Cast Youtube</string>
    <string name="text_watch_youtube_videos_on_your_tv">Watch Youtube videos on your TV</string>
    <string name="text_cast_web">Cast Web</string>
    <string name="text_browse_and_mirror_videos_from_websites">Browse and mirror videos from websites</string>
    <string name="text_movie_advisor">Movie Advisor</string>
    <string name="text_find_movies_or_series_to_watch">Find movies or series to watch</string>
    <string name="text_watch_iptv">Watch IPTV</string>
    <string name="text_1000_channels_in_high_quality">1000+ channels in high quality</string>
    <string name="text_iptv">IPTV</string>
    <string name="text_genres">Genres</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_filter_channels">Filter Channels</string>
    <string name="text_select_filter_mode">Select Filter Mode</string>
    <string name="text_by_country">By country</string>
    <string name="text_by_language">By language</string>
    <string name="text_all_countries">All Countries</string>
    <string name="text_all_language">All Language</string>
    <string name="text_search_country">Search country</string>
    <string name="text_search_language">Search language</string>
    <string name="text_search_category">Search Category</string>
    <string name="text_search_category_name">Search category name</string>
    <string name="text_search_channel_name">Search by channel name</string>
    <string name="text_refresh_playlist">Refresh playlist</string>
    <string name="text_refreshing_playlist_progress">Refreshing playlist %1$d%%</string>
    <string name="text_playlist_refreshed">Playlist refreshed</string>
    <string name="text_channels_count">%1$d Channels</string>
    <string name="text_no_categories_found">No categories found</string>
    <string name="text_no_channels_found">No channels found</string>
    <string name="text_channel_unavailable">Channel Unavailable</string>
    <string name="text_channel_unavailable_message">This channel is currently unavailable.\nPlease try again later.</string>
    <string name="text_select_channel_first">Please select a channel first</string>
    <string name="text_add_to_favorites">Add to favorites</string>
    <string name="text_pin_category">Pin category</string>
    <string name="text_unpin_category">Unpin category</string>
    <string name="text_remove_from_favorites">Remove from favorites</string>
    <string name="text_cast_not_available">Cast not available</string>
    <string name="text_google_play_services_has_not_been_initialized">Google Play services has not been initialized.</string>
    <string name="text_casting_to_tv_plain">Casting to TV</string>
    <string name="text_what_would_you_like_to_do">What would you like to do?</string>
    <string name="text_restart_from_beginning">Restart from beginning</string>
    <string name="text_failed_to_connect_to_cast_device">Failed to connect to cast device</string>
    <string name="text_back">Back</string>
    <string name="text_forward">Forward</string>
    <string name="text_open_in_youtube">Open in YouTube</string>
    <string name="text_open_youtube_video">Open a YouTube video</string>
    <string name="text_cast_with_youtube">Cast with YouTube</string>
    <string name="text_opening_youtube">Opening YouTube...</string>
    <string name="text_select_youtube_video_first">Please open a YouTube video first</string>
    <string name="text_youtube_required">YouTube is required</string>
    <string name="text_youtube_required_message">YouTube is required to cast this video.</string>
    <string name="text_install_youtube">Install YouTube</string>
    <string name="text_back_to_youtube">Back to YouTube</string>
    <string name="text_use_youtube_cast_button">Use the Cast button in the YouTube player to select your TV.</string>
    <string name="text_youtube_embed_unavailable">This video cannot be played in the YouTube player. Try another video.</string>
    <string name="text_web_page_not_supported">This link cannot be opened</string>
    <string name="text_could_not_open_youtube">Could not open YouTube</string>
    <string name="text_cast_web_videos">Cast Web Videos</string>
    <string name="text_cast_to_tv">Cast to TV</string>
    <string name="text_search">Search</string>
    <string name="text_secure_browsing">Secure Browsing</string>
    <string name="text_secure_browsing_desc">The app doesn\'t save your search history\nand the pages you visit</string>
    <string name="text_favorite_tabs">Favorite Tabs</string>
    <string name="text_youtube">Youtube</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_archive_org">Archive.org</string>
    <string name="text_vevo">Vevo</string>
    <string name="text_twitch">Twitch</string>
    <string name="text_veoh">Veoh</string>
    <string name="text_reload">Reload</string>
    <string name="text_bookmark">Bookmark</string>
    <string name="text_no_videos_detected">No Videos Detected</string>
    <string name="text_detecting_videos">Detecting Videos...</string>
    <string name="text_connect_to_tv">Connect to TV</string>
    <string name="text_connecting_to_tv">Connecting to TV...</string>
    <string name="text_cast_video">Cast Video</string>
    <string name="text_select_video">Select Video</string>
    <string name="text_select_video_count">%1$d Videos Detected</string>
    <string name="text_web_video">Web video</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_something_went_wrong">Something Went Wrong</string>
    <string name="text_cast_failure_message">Make sure your TV is turned on and connected to the same Wi-Fi network as your Phone and try again</string>
    <string name="text_ok">OK</string>
    <string name="text_try_again">Try Again</string>
    <string name="text_enter_tv_ip_title">Manually Enter IP Address</string>
    <string name="text_enter_tv_ip_message">Use this when your TV is on the same Wi-Fi but does not appear in discovery.</string>
    <string name="text_tv_ip_hint">192.168.1.50</string>
    <string name="text_connect">Connect</string>
    <string name="text_all">All</string>
    <string name="text_movies">Movies</string>
    <string name="text_series">Series</string>
    <string name="text_search_options">Search Options</string>
    <string name="text_description">Description</string>
    <string name="text_optional">Optional</string>
    <string name="text_get_popular_list">Get Popular List</string>
    <string name="text_movie_advisor_description_hint">Describe the movie mood you want. Add details, e.g. Suggest a thriller with a smart plot twist.</string>
    <string name="text_movie_advisor_loading">Finding the best matches for you...</string>
    <string name="text_movie_advisor_result_intro">These titles are ranked from your content type, genres, moods, release year, rating and description.</string>
    <string name="text_no_matches_found">No matches found</string>
    <string name="text_movie_advisor_empty_message">Try lowering the rating or selecting fewer filters.</string>
    <string name="text_edit_filters">Edit Filters</string>
    <string name="text_broaden_search">Broaden Search</string>
    <string name="text_unable_to_load_movie_data">Unable to load movie data</string>
    <string name="text_find_next">Find Next</string>
</resources>